--- a/doc/sty/unicode.sty
+++ b/doc/sty/unicode.sty
@@ -1,10 +1,12 @@
 \DeclareUnicodeCharacter{8759}{\ensuremath{::}}
 \DeclareUnicodeCharacter{931}{\ensuremath{\Sigma}}
 \DeclareUnicodeCharacter{8344}{\ensuremath{_{m}}}
+\DeclareUnicodeCharacter{8799}{\ensuremath{\stackrel{?}{=}}}
 
 \newcommand{\texteta}{\ensuremath{\eta}}
 \newcommand{\textalpha}{\ensuremath{\alpha}}
 \renewcommand{\textbeta}{\ensuremath{\beta}}
 \newcommand{\textlambda}{\ensuremath{\lambda}}
 \newcommand{\textomicron}{o}
+
 
