avanzo cap 5, seccion 1, no se bien con que detalle incluir las pruebas que siguen, queda medio largo me parece y esta copiado todo

--- a/doc/sty/unicode.sty
+++ b/doc/sty/unicode.sty
@@ -2,6 +2,7 @@
 \DeclareUnicodeCharacter{931}{\ensuremath{\Sigma}}
 \DeclareUnicodeCharacter{8344}{\ensuremath{_{m}}}
 \DeclareUnicodeCharacter{8799}{\ensuremath{\stackrel{?}{=}}}
+\DeclareUnicodeCharacter{737}{\ensuremath{^l}}
 
 \newcommand{\texteta}{\ensuremath{\eta}}
 \newcommand{\textalpha}{\ensuremath{\alpha}}
