--- a/doc/tex/casodelay.tex
+++ b/doc/tex/casodelay.tex
@@ -31,6 +31,32 @@ Como se puede ver, la definición de esta función es muy sencilla. Para los cas
 
 \ExecuteMetaData[latex/Delay.tex]{equality}
 
+Una vez introducido el tipo \AgdaDatatype{Kind}, se definen las relaciones propiamente dichas. Esto se realiza mediante la creación de un módulo llamado \AgdaModule{Equality}, el cual toma como parámetros un conjunto \AgdaBound{A} \AgdaSymbol{:} \AgdaPrimitiveType{Set}, que será el tipo de retorno, y una relación \AgdaBound{$\_\sim\_$} \AgdaSymbol{:} \AgdaBound{A} \AgdaSymbol{$\rightarrow$} \AgdaBound{A} \AgdaSymbol{$\rightarrow$} \AgdaPrimitiveType{Set} que establece una noción de igualdad entre valores de tipo \AgdaBound{A}. 
+
+\ExecuteMetaData[latex/Delay.tex]{modequality}
+
+Las relaciones se definen a través del tipo \AgdaDatatype{Rel}, el cual toma como parámetro un \AgdaDatatype{Kind} que indica qué tipo de relación es y dos valores de tipo \AgdaBound{A} \AgdaDatatype{$\bot$}, los cuales va a comparar mediante la relación correspondiente. El tipo \AgdaDatatype{Rel} tiene cuatro constructores:
+\begin{itemize}[noitemsep]
+\item El constructor \AgdaInductiveConstructor{now} indica que, si se tiene una prueba de que dos valores \AgdaBound{x} e \AgdaBound{y} de tipo \AgdaBound{A} están relacionados por la relación \AgdaBound{$\sim$}, es decir que son iguales en \AgdaBound{A}, entonces los términos (\AgdaInductiveConstructor{now} \AgdaBound{x}) y (\AgdaInductiveConstructor{now} \AgdaBound{y}) están relacionados en \AgdaBound{A} \AgdaDatatype{$\bot$} para los tres tipos de relación posibles. Esto está dado por la utilización de la variable \AgdaBound{k} que puede tomar cualquier valor de tipo \AgdaDatatype{Kind} y quiere decir que (\AgdaInductiveConstructor{now} \AgdaBound{x}) y (\AgdaInductiveConstructor{now} \AgdaBound{y}) son bisemejantes tanto débil como fuertemente, y que además (\AgdaInductiveConstructor{now} \AgdaBound{x}) es mayor o igual a (\AgdaInductiveConstructor{now} \AgdaBound{y}).
+
+\item El constructor \AgdaInductiveConstructor{later} también sirve para las tres relaciones. En este caso, los \AgdaBound{x} e \AgdaBound{y} que recibe como parámetros implícitos son de tipo \AgdaFunction{$\infty$} \AgdaBound{A} \AgdaDatatype{$\bot$} (valores de tipo \AgdaBound{A} \AgdaDatatype{$\bot$} posiblemente infinitos). Este constructor pide una prueba (posiblemente infinita) de que (\AgdaField{$\flat$} \AgdaBound{x}) y (\AgdaField{$\flat$} \AgdaBound{y}) están relacionados por la relación \AgdaBound{k} y afirma que entonces (\AgdaInductiveConstructor{later} \AgdaBound{x}) y (\AgdaInductiveConstructor{later} \AgdaBound{y}) están relacionados por la misma relación \AgdaBound{k}.
+
+\item El constructor \AgdaInductiveConstructor{later$^r$} se puede utilizar únicamente para bisemejanza débil. Dados \AgdaBound{x} \AgdaSymbol{:} \AgdaBound{A} \AgdaDatatype{$\bot$} e \AgdaBound{y} \AgdaSymbol{:} \AgdaFunction{$\infty$} \AgdaBound{A} \AgdaDatatype{$\bot$} que son parámetros implícitos y una prueba de que \AgdaBound{x} y (\AgdaField{$\flat$} \AgdaBound{y}) son débilmente bisemejantes, este constructor afirma que entonces \AgdaBound{x} y (\AgdaInductiveConstructor{later} \AgdaBound{y}) son débilmente bisemejantes también. Intuitivamente, \AgdaInductiveConstructor{later$^r$} permite agregar un constructor \AgdaInductiveConstructor{later} en el lado derecho de una bisemejanza débil.
+
+\item El constructor \AgdaInductiveConstructor{later$^l$} es análogo a \AgdaInductiveConstructor{later$^r$} e, intuitivamente, permite agregar un constructor \AgdaInductiveConstructor{later} en el lado izquierdo de una relación que, en este caso, puede ser bisemejanza débil o desigualdad. Esto se evidencia en el uso de la variable \AgdaBound{k} que tiene tipo \AgdaDatatype{OtherKind} ya que luego en el tipo de relación que se le pasa a \AgdaDatatype{Rel} se utiliza (\AgdaInductiveConstructor{other} \AgdaBound{k}), quedando claro por qué al definir el tipo \AgdaDatatype{Kind} se separa el tipo \AgdaInductiveConstructor{strong} de los otros dos. 
+\end{itemize}
+
+En el uso que permite cada constructor se puede ver que la relación de tipo \AgdaInductiveConstructor{strong} es la más restrictiva, permitiendo únicamente agregar constructores \AgdaInductiveConstructor{later} a ambos lados de la igualdad, mientras que la desigualdad (\AgdaInductiveConstructor{other geq}) es un poco más débil ya que permite también agregar sólo a izquierda y la bisemejanza débil es la más débil de todas ya que permite agregar a ambos lados por separado.
+
+Luego del tipo \AgdaDatatype{Rel} se definen los operadores \AgdaFunction{$\cong$}, \AgdaFunction{$\gtrsim$}, \AgdaFunction{$\lesssim$} y \AgdaFunction{$\approx$}, los cuales representan la bisemejanza fuerte, la desigualdad (mayor o igual), la desigualdad invertida (menor o igual) y la bisemejanza débil, respectivamente. 
+
+A continuación de esto se definen otros operadores que tienen que ver con la noción de convergencia dada por la definición \ref{def:convergencia}. \AgdaBound{x} \AgdaFunction{$\Downarrow$[} \AgdaBound{k} \AgdaFunction{]} \AgdaBound{y} indica que \AgdaBound{x} se relaciona mediante la relación \AgdaBound{k} con (\AgdaInductiveConstructor{now} \AgdaBound{y}). En el caso especial de que la relación sea bisemejanza débil, se escribe \AgdaBound{x} \AgdaFunction{$\Downarrow$} \AgdaBound{y} y se dice que \AgdaBound{x} converge al valor \AgdaBound{y} \AgdaSymbol{:} \AgdaBound{A}. Por otro lado, \AgdaBound{x} \AgdaFunction{$\Downarrow$} indica que la computación \AgdaBound{x} termina, es decir que existe algún valor \AgdaBound{v} tal que \AgdaBound{x} \AgdaFunction{$\Downarrow$} \AgdaBound{v}. Por último, \AgdaBound{x} \AgdaFunction{$\Uparrow$[} \AgdaBound{k} \AgdaFunction{]} indica que \AgdaBound{x} se relaciona con el valor especial \AgdaFunction{never} mediante la relación \AgdaBound{k}. En el caso de que esa relación sea (\AgdaInductiveConstructor{other weak}) se escribe \AgdaBound{x} \AgdaFunction{$\Uparrow$} y se dice que la computación \AgdaBound{x} no termina.
+
+Luego de dar todas las definiciones, se prueba que ambas bisemejanzas son relaciones de equivalencia y que la desigualdad es un orden parcial. Antes de poder demostrar esto, se prueba un conjunto de lemas que serán de utilidad para tal propósito. Todas estas pruebas se sitúan dentro de un módulo sin nombre parametrizado con el conjunto \AgdaBound{A} de retorno y su relación de igualdad. Esto se hace para fijar tal conjunto y su relación y poder utilizarlos a lo largo de todas las demostraciones. {\color{red} Vale la pena pegar todo el choclo de demostraciones y explicar una por una?}
+
+\ExecuteMetaData[latex/Delay.tex]{lemas}
+
+
 
 
 \section{Prueba de que el tipo \textit{delay} es una mónada}
