--- a/doc/tex/form.tex
+++ b/doc/tex/form.tex
@@ -133,7 +133,7 @@ Como paso previo a la formalización de las mónadas concurrentes, se presenta e
 
 En la definición \ref{def:bimonord} se presenta a un bimonoide ordenado como un conjunto parcialmente ordenado $(A,\sqsubseteq)$ junto con dos estructuras monoidales $(A,;,\mathtt{skip})$ y $(A,*,\mathtt{nothing})$ tales que $;$ y $*$ son compatibles con $\sqsubseteq$ y $*$ es conmutativa {\color{red} La compatibilidad de los operadores con el orden y la conmutatividad de $*$ no están, debería agregarlos?}. Luego, en la definición \ref{def:monoidconc} se define a un monoide concurrente como un bimonoide ordenado tal que los neutros coinciden y se cumple la ley de intercambio.
 
-Al igual que en las demás estructuras, los primeros dos campos de \AgdaRecord{Concurrent Monoid} representan la noción de igualdad junto con la prueba de que esta es una relación de equivalencia. De manera similar, el tercer y cuarto campo introducen una relación de orden junto con una prueba de que esta es un preorden, es decir que es reflexiva, antisimétrica y transitiva. Esta relación se corresponde con el orden $\sqsubseteq$ del conjunto que se pide en la definición formal y es necesaria, sobre todo, debido a la presencia de la ley de intercambio, la cual está dada, a diferencia de las demás propiedades, como una desigualdad. Se requiere entonces que exista una relación de orden sobre el conjunto \AgdaBound{M} y esta debe ser un preorden respecto de la noción de igualdad previamente introducida. Esto significa que las propiedades de reflexividad, antisimetría y transitividad están demostradas respecto de \AgdaField{$\_\cong_m\_$}. La prueba \AgdaField{porder$_m$} de que la relación \AgdaField{$\_\lesssim_m\_$} es un preorden está dada por un habitante de \AgdaRecord{IsPreorder}, el cual es un tipo \AgdaKeyword{record} definido en el módulo \href{https://agda.github.io/agda-stdlib/Relation.Binary.Structures.html}{\AgdaModule{Relation.Binary.Structures}}.
+Al igual que en las demás estructuras, los primeros dos campos de \AgdaRecord{Concurrent Monoid} representan la noción de igualdad junto con la prueba de que esta es una relación de equivalencia. De manera similar, el tercer y cuarto campo introducen una relación de orden junto con una prueba de que esta es un preorden, es decir que es reflexiva, antisimétrica y transitiva. {\color{red} Comentario: me di cuenta de que preorder no pide antisimetría, debería no pedirla o cambio preorden por orden parcial que sí lo pide? creo que habría que cambiar todo por IsPartialOrder} Esta relación se corresponde con el orden $\sqsubseteq$ del conjunto que se pide en la definición formal y es necesaria, sobre todo, debido a la presencia de la ley de intercambio, la cual está dada, a diferencia de las demás propiedades, como una desigualdad. Se requiere entonces que exista una relación de orden sobre el conjunto \AgdaBound{M} y esta debe ser un preorden respecto de la noción de igualdad previamente introducida. Esto significa que las propiedades de reflexividad, antisimetría y transitividad están demostradas respecto de \AgdaField{$\_\cong_m\_$}. La prueba \AgdaField{porder$_m$} de que la relación \AgdaField{$\_\lesssim_m\_$} es un preorden está dada por un habitante de \AgdaRecord{IsPreorder}, el cual es un tipo \AgdaKeyword{record} definido en el módulo \href{https://agda.github.io/agda-stdlib/Relation.Binary.Structures.html}{\AgdaModule{Relation.Binary.Structures}}.
 
 Los siguientes dos campos, \AgdaField{$\_+_m\_$} y \AgdaField{zero$_m$}, representan la primera estructura monoidal del bimonoide ordenado, es decir, el operador $;$ y su neutro $\mathtt{skip}$. Seguidamente, se presentan sus leyes o propiedades: \AgdaField{sidl} y \AgdaField{sidr} son las pruebas de que \AgdaField{zero$_m$} es neutro de la operación \AgdaField{$\_+_m\_$}, a izquierda y derecha respectivamente, y \AgdaField{sassoc} es la prueba de que dicha operación es asociativa. Estos cinco campos son iguales a los que aparecen en la formalización de monoide, la única diferencia es que en las leyes se antepone la letra \AgdaField{s} para indicar que estas propiedades pertenecen a la suma. 
 
